stabilized tests, playing around with where interaction should happen, applying streams more/better, worked on fixing maven issues